# nnunet_worker_direct_gpu

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  project.md  pyproject.toml  requirements.txt
app/: config.py  dashboard_client.py  trainer.py  worker.py
scripts/: preprocess.sh  train.sh
